--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "express": "^4.12.3",
     "gulp": "^3.9.0",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.3.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -42,6 +44,7 @@
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.0"
