got a mongoDB connected but haven't figured out how to add store yet

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.12.3",
     "gulp": "^3.9.0",
+    "mongoose": "^5.10.15",
     "prop-types": "^15.6.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
